# ANN-retrieval-system

./: .gitignore  README.md  start.ps1  使用说明文档.md
backend/: .env  README.md  alembic.ini  pyproject.toml  requirements.txt  run-backend.ps1  run-worker.ps1
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: ai.py  auth.py  clinical.py  datasets.py  files.py  indexes.py  metrics.py  ops.py  reports.py  research.py  search.py  (+3 more)
backend/app/core/: config.py  enums.py  exceptions.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  ann_index.py  cell_metadata.py  cell_vector.py  dataset.py  search_task.py  user.py
backend/app/schemas/: ai.py  auth.py  common.py  dataset.py  index.py  search.py  task.py
backend/app/services/: ai_search_service.py  ann_engine.py  auth_service.py  data_access_service.py  dataset_service.py  index_service.py  llm_client.py  metrics_service.py  preprocess_service.py  search_service.py  task_service.py  user_service.py  visualization_service.py
backend/app/tasks/: batch_search_tasks.py  celery_app.py  index_tasks.py  preprocess_tasks.py  report_tasks.py
backend/app/utils/: audit.py  file_store.py  index_io.py  response.py  time.py  vector_codec.py
backend/control/: celery.pidbox.exchange
backend/migrations/: README  env.py
backend/migrations/versions/: c94893e4f345_init_core_tables.py  d18e2a3b9b21_add_dataset_ids_to_ann_indices.py
backend/scripts/: benchmark_ann.py  bootstrap_admin.py  real_liver_backend_test.py  smoke_backend.py
backend/tests/: test_e_search_flow.py
(+55 files in other folders)
